Correção de alguns pontos para fazer o deploy da aplicação

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             <div class="image-container">
               <img src="assets/notebook.png" alt="Desenvolvimento Web">
             </div>
-            <h3>Desenvolvimento Web</h3>
+            <h3>Desenvolvimento Full-Stack</h3>
             <p>
               Experiência em desenvolvimento fullstack com foco em tecnologias
-              modernas.
+              de todas as gerações.
             </p>
           </li>
         </ul>
@@ -126,40 +126,38 @@
       <ul>
         <li>
           <div class="image">
-            <img src="assets/task-manager.png" alt="Gerenciamento de tarefas" />
+            <img src="https://github.com/vagnercruz/Pokedex/blob/main/assets/img/aplicacao_finalizada.png?raw=true" alt="Gerenciamento de tarefas" />
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Sistema de gerenciamento de tarefas DEF
+              Pokedex
             </h3>
             <p>
-              Sistema web desenvolvido para a empresa DEF, com funcionalidades
-              como cadastro de tarefas, atribuição de responsáveis e
-              acompanhamento do status das atividades.
+              Este é um projeto de estudo que consiste em uma Pokédex desenvolvida utilizando HTML, CSS e JavaScript. O projeto faz uso da Pokémon API para buscar informações de nome e numeração dos Pokémon e exibi-las de forma organizada e interativa.
             </p>
-            <a href="#">Leia mais &rarr;</a>
+            <a href="https://github.com/vagnercruz/Pokedex?tab=readme-ov-file#descri%C3%A7%C3%A3o">Leia mais &rarr;</a>
           </div>
         </li>
         <li class="projects__reversed-list">
           <div class="image">
-            <img src="assets/ecommerce.png" alt="ecommerce" />
+            <img src="https://camo.githubusercontent.com/06d8d9cb985920ae1cc1fe597d676f0805b0e906f1725d3593cd53d88f3ec8f5/68747470733a2f2f692e696d6775722e636f6d2f436245505042502e706e67" alt="ecommerce" />
           </div>
           <div class="projects__info">
             <h3 class="tertiary-title">
-              Desenvolvimento de Loja Virtual MeuSofazim.com
+              Verificador de Senhas
             </h3>
             <p>
-              Site de e-commerce desenvolvido do zero com tecnologias como React
-              e Node.js, além de integração com diversos meios de pagamento e
-              entrega.
+              Este é um projeto que consiste em um verificador de senhas desenvolvido em JavaScript. O objetivo principal é validar a segurança das senhas fornecidas pelo usuário, garantindo que elas atendam a determinados critérios de complexidade.
             </p>
             <a href="#">Leia mais &rarr;</a>
           </div>
         </li>
         <li>
+          <!--
           <div class="image">
             <img src="assets/delivery.png" alt="delivery" />
           </div>
+          
           <div class="projects__info">
             <h3 class="tertiary-title">
               App de delivery e Dashboard DeliveryJá!
@@ -171,6 +169,7 @@
             </p>
             <a href="#">Leia mais &rarr;</a>
           </div>
+          -->
         </li>
       </ul>
     </section>
