Ajustes na aba project

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <p>
               Este é um projeto que consiste em um verificador de senhas desenvolvido em JavaScript. O objetivo principal é validar a segurança das senhas fornecidas pelo usuário, garantindo que elas atendam a determinados critérios de complexidade.
             </p>
-            <a href="#">Leia mais &rarr;</a>
+            <a href="https://github.com/vagnercruz/verificador_senha">Leia mais &rarr;</a>
           </div>
         </li>
         <li>
